--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   },
   "dependencies": {
     "hono": "^3.12.8",
-    "mongoose": "^8.1.1"
+    "mongoose": "^8.1.1",
+    "serverless-http": "^3.2.0"
   },
   "devDependencies": {
     "@types/bun": "^1.0.0"
