--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "dependencies": {
     "hono": "^3.12.8",
     "mongoose": "^8.1.1",
-    "serverless-http": "^3.2.0"
+    "serverless-http": "^3.2.0",
+    "web3": "^4.6.0"
   },
   "devDependencies": {
     "@types/bun": "^1.0.0"
